fix checkStyle